--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ABZ.Test</string>
+    <string name="success_got_it">Got it</string>
+    <string name="success_registered_successfully">User successfully registred</string>
+    <string name="failed_try_again">Try again</string>
+    <string name="failed_that_email_is_already_registered">That email is already registered</string>
 </resources>
