--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="success_registered_successfully">User successfully registred</string>
     <string name="failed_try_again">Try again</string>
     <string name="failed_that_email_is_already_registered">That email is already registered</string>
+    <string name="connection_error_try_again">Try again</string>
+    <string name="conncetion_error_there_is_no_internet_connection">There is no internet connection</string>
 </resources>
