--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="failed_that_email_is_already_registered">That email is already registered</string>
     <string name="connection_error_try_again">Try again</string>
     <string name="conncetion_error_there_is_no_internet_connection">There is no internet connection</string>
+    <string name="bottom_dialog_choose_how_you_want_to_add_a_photo">Choose how you want to add a photo</string>
+    <string name="bottom_dialog_camera">Camera</string>
+    <string name="bottom_dialog_gallery">Gallery</string>
 </resources>
